--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
+    "@types/d3": "^4.10.0",
     "classnames": "^2.2.5",
+    "d3": "^4.10.0",
     "mobx": "^3.1.16",
     "mobx-react": "^4.2.2",
     "mobx-react-router": "^4.0.1",
