--- a/package.json
+++ b/package.json
@@ -1,53 +1,32 @@
 {
-  "name": "typescript-react-mobx-boilerplate",
+  "name": "wormnet",
   "version": "1.0.0",
-  "private": true,
-  "description": "A frontend boilerplate with React, MobX and Typescript",
+  "description": "neural visualization",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000 --open",
+    "dev": "node devServer.js",
     "build": "webpack -p --progress --colors"
   },
+  "author": "Matt Erhart",
   "license": "MIT",
   "devDependencies": {
-    "@types/classnames": "^2.2.0",
-    "@types/node": "^8.0.7",
-    "@types/react": "^15.0.34",
-    "@types/react-dom": "^15.5.1",
-    "@types/react-router": "^4.0.12",
-    "@types/webpack": "^3.0.1",
-    "awesome-typescript-loader": "^3.2.1",
-    "css-loader": "^0.28.4",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.11.2",
-    "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.29.0",
-    "mobx-react-devtools": "^4.2.15",
-    "postcss": "^6.0.4",
-    "postcss-browser-reporter": "^0.5.0",
-    "postcss-cssnext": "^2.11.0",
-    "postcss-import": "^10.0.0",
-    "postcss-loader": "^2.0.6",
-    "postcss-reporter": "^4.0.0",
-    "postcss-url": "^7.0.0",
-    "react-hot-loader": "^1.3.1",
-    "style-loader": "^0.18.2",
-    "typescript": "^2.4.1",
-    "url-loader": "^0.5.9",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0",
-    "webpack-hot-middleware": "^2.18.0"
+    "@types/d3": "^4.10.0",
+    "@types/lodash": "^4.14.71",
+    "@types/react": "^16.0.0",
+    "@types/react-dom": "^15.5.2",
+    "fuse-box": "^2.2.2-beta.7",
+    "typescript": "^2.4.2"
   },
   "dependencies": {
-    "@types/d3": "^4.10.0",
-    "classnames": "^2.2.5",
     "d3": "^4.10.0",
-    "mobx": "^3.1.16",
-    "mobx-react": "^4.2.2",
-    "mobx-react-router": "^4.0.1",
+    "lodash": "^4.17.4",
+    "material-ui": "^0.18.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router": "^4.1.1"
+    "react-router": "^4.1.1",
+    "react-tap-event-plugin": "^2.0.1",
+    "rxjs": "^5.4.2",
+    "store": "^2.0.12",
+    "styled-components": "^2.1.1"
   }
 }
