--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,27 @@
 {
-  "compilerOptions": {
-    "sourceMap": true,
-    "target": "es5",
-    "jsx": "react",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "declaration": false,
-    "noImplicitAny": false,
-    "noImplicitReturns": false,
-    "removeComments": true,
-    "strictNullChecks": false,
-    "outDir": "build",
-    "lib": [
-      "es6",
-      "es7",
-      "dom"
+    "compilerOptions": {
+        "moduleResolution": "node",
+        "target": "es5",
+        "module":"es2015",
+        "jsx": "react",
+        "lib": ["es2015", "es2016", "es2017", "dom"],
+        "strict": false,
+        "sourceMap": true,
+        "declaration": true,
+        "allowJs": true,
+        "noImplicitAny": false,
+            "noImplicitReturns": false,
+
+        "allowSyntheticDefaultImports": true,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+        "declarationDir": "dist/types",
+        "outDir": "compiled",
+        "typeRoots": [
+          "node_modules/@types"
+        ]
+    },
+    "include": [
+        "src"
     ]
-  },
-  "exclude": [
-    "dist",
-    "build",
-    "node_modules"
-  ]
 }
