--- a/package.json
+++ b/package.json
@@ -14,17 +14,27 @@
     "@types/lodash": "^4.14.71",
     "@types/react": "^16.0.0",
     "@types/react-dom": "^15.5.2",
+    "@types/recompose": "^0.23.3",
+    "awesome-typescript-loader": "^3.2.2",
+    "copy-webpack-plugin": "^4.0.1",
+    "extract-text-webpack-plugin": "^3.0.0",
     "fuse-box": "^2.2.2-beta.7",
-    "typescript": "^2.4.2"
+    "html-loader": "^0.5.0",
+    "html-webpack-plugin": "^2.30.1",
+    "path": "^0.12.7",
+    "typescript": "^2.4.2",
+    "webpack": "^3.4.1"
   },
   "dependencies": {
     "d3": "^4.10.0",
     "lodash": "^4.17.4",
     "material-ui": "^0.18.7",
     "react": "^15.6.1",
+    "react-addons-perf": "^15.4.2",
     "react-dom": "^15.6.1",
     "react-router": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
+    "recompose": "^0.24.0",
     "rxjs": "^5.4.2",
     "store": "^2.0.12",
     "styled-components": "^2.1.1"
