--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,21 @@
 {
-    "compilerOptions": {
-        "moduleResolution": "node",
-        "target": "es5",
-        "module":"es2015",
-        "jsx": "react",
-        "lib": ["es2015", "es2016", "es2017", "dom"],
-        "strict": false,
-        "sourceMap": true,
-        "declaration": false,
-        "allowJs": true,
-        "noImplicitAny": false,
-            "noImplicitReturns": false,
-
-        "allowSyntheticDefaultImports": true,
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "outDir": "compiled",
-        "typeRoots": [
-          "node_modules/@types"
-        ]
-    },
-    "include": [
-        "src"
-    ]
+  "compilerOptions": {
+    "moduleResolution": "node",
+    "target": "es5",
+    "module": "es2015",
+    "jsx": "react",
+    "lib": ["es2015", "es2016", "es2017", "dom"],
+    "strict": false,
+    "sourceMap": true,
+    "declaration": false,
+    "allowJs": true,
+    "noImplicitAny": false,
+    "noImplicitReturns": false,
+    "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "outDir": "compiled",
+    "typeRoots": ["node_modules/@types"]
+  },
+  "include": ["src"]
 }
