--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
   },
   "dependencies": {
     "d3": "^4.10.0",
+    "gsap": "^1.20.2",
     "lodash": "^4.17.4",
     "material-ui": "^0.18.7",
     "react": "^15.6.1",
     "react-addons-perf": "^15.4.2",
     "react-dom": "^15.6.1",
+    "react-gsap-enhancer": "^0.3.0",
     "react-router": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
     "recompose": "^0.24.0",
