--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gsap": "^1.20.2",
     "lodash": "^4.17.4",
     "material-ui": "^0.18.7",
+    "mkdirp": "^0.5.1",
     "react": "^15.6.1",
     "react-addons-perf": "^15.4.2",
     "react-dom": "^15.6.1",
