--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,14 @@
 {
   "hosting": {
-    "public": "build"
+    "public": "build",
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  },
+  "database": {
+    "rules": "database.rules.json"
   }
 }
